# SlackbotTechnoshare

./: .env.example  .env.mlflow.example  .gitignore  README.md  pyproject.toml
data/: domain_rules.yaml  project_context.yaml
data/prompts/: analyze.yaml  stage_a_extract_facts.md  stage_a_extract_facts.yaml  stage_b_compose_reply.md  stage_b_compose_reply.yaml
docs/: ARCHITECTURE_DIAGRAMS.md  MLFLOW.md  MLFLOW_ARCHITECTURE.md  MLFLOW_CHECKLIST.md  MLFLOW_GUIDE.md  MLFLOW_IMPLEMENTATION_SUMMARY.md  MLFLOW_MIGRATION.md  MLFLOW_QUICKSTART.md  MLFLOW_TEST_RESULTS.md
experiments/compare_extraction_methods/: README.md  compare_extraction_methods.py
scripts/: init_db.py  print_slack_input.py  replay_event.py  run_eval.py  run_local_tunnel.md  run_ngrok.py  run_pipeline_on_latest.py  start_mlflow.sh  sync_prompts.py  verify_config.py
src/technoshare_commentator/: __init__.py  config.py  log.py  main_ingest.py  main_socket.py  main_worker.py
src/technoshare_commentator/llm/: analyze.py  client.py  prompts.py  schema.py  stage_a.py  stage_b.py  stage_b_schema.py
src/technoshare_commentator/mlops/: __init__.py  prompt_registry.py  tracing.py  tracking.py
src/technoshare_commentator/pipeline/: post_analysis.py  post_stage_b.py  run.py
src/technoshare_commentator/quality/: gates.py  sentence.py
src/technoshare_commentator/rendering/: slack_format.py
tests/: README.md  conftest.py  test_idempotency.py  test_ingest_flow.py  test_llm_logic.py  test_real_llm_search.py  test_retrieval_components.py  test_slack_client.py  test_slack_format.py  test_slack_integration.py  test_url_extract.py
tests/integration/: test_mlflow_integration.py  test_real_llm_search.py
tests/unit/: test_idempotency.py  test_langfuse_tracing.py  test_langfuse_tracking.py  test_llm_logic.py  test_mlflow_evaluation.py  test_mlflow_tracing.py  test_mlflow_tracking.py  test_retrieval_components.py  test_sentence_gate.py  test_slack_client.py  test_slack_signature.py
(+19 files in other folders)
