[project]
name = "technoshare-commentator"
version = "0.1.0"
description = "Local TechnoShare Commentator Agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic",
    "pydantic-settings",
    "httpx",
    "beautifulsoup4",
    "trafilatura",
    "tenacity",
    "openai",
    "rich",
    "python-dotenv",
    "slack-sdk",
    "pyyaml>=6.0.3",
    "ngrok>=1.7.0",
    "markupsafe>=3.0.3",
    "mlflow>=2.14.0",
    "slack-bolt>=1.27.0",
]

[project.scripts]
technoshare-socket = "technoshare_commentator.main_socket:main"
technoshare-worker = "technoshare_commentator.main_worker:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/technoshare_commentator"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-httpx>=0.36.0",
    "pytest-mock>=3.15.1",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
markers = [
  "unit: fast deterministic tests",
  "integration: tests that call external services (OpenAI, web, etc.)"
]
